--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -8,8 +8,8 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
-  SOLANA_VERSION: '1.14.16'
-  RUST_TOOLCHAIN: stable
+  SOLANA_VERSION: '1.17.12'
+  RUST_TOOLCHAIN: '1.69.0'
 
 jobs:
   lint:
@@ -17,17 +17,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          override: true
-          profile: minimal
-          toolchain: ${{ env.RUST_TOOLCHAIN }}
-          components: rustfmt, clippy
+        run: rustup toolchain install ${{ env.RUST_TOOLCHAIN }}
 
       - name: Cache dependencies
-        uses: Swatinem/rust-cache@v1
+        uses: Swatinem/rust-cache@v2
 
       - name: Run fmt
         run: cargo fmt -- --check
@@ -38,24 +33,19 @@ jobs:
   test:
     name: Run Tests
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Install Linux dependencies
         run: sudo apt-get update && sudo apt-get install -y pkg-config build-essential libudev-dev
 
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          override: true
-          profile: minimal
-          toolchain: ${{ env.RUST_TOOLCHAIN }}
+        run: rustup toolchain install ${{ env.RUST_TOOLCHAIN }}
 
       - name: Cache dependencies
-        uses: Swatinem/rust-cache@v1
+        uses: Swatinem/rust-cache@v2
 
       - name: Cache Solana binaries
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: |
             ~/.cache/solana
@@ -71,13 +61,18 @@ jobs:
           echo Generating keypair...
           solana-keygen new -o "$HOME/.config/solana/id.json" --no-passphrase --silent
 
-      - name: Install BPF tools
-        # Note: as a workaround for cargo build-bpf issue run it and ignore errors to install the BPF tools
-        # https://github.com/solana-labs/solana/issues/26583
-        run: cargo build-bpf || true
+      # - name: Install BPF tools
+      #   # Note: as a workaround for cargo build-bpf issue run it and ignore errors to install the BPF tools
+      #   # https://github.com/solana-labs/solana/issues/26583
+      #   run: cargo build-bpf || true
 
-      - name: Build dependencies
-        run: cargo +bpf build-bpf
+      # - name: Build dependencies
+      #   run: cargo +bpf build-bpf
 
-      - name: Run bpf tests
-        run: cargo +bpf test-bpf
+      # - name: Run bpf tests
+      #   run: cargo +bpf test-bpf
+      - name: Build
+        run: |
+          cargo build-sbf --features enable-gpl || true
+          cargo +solana build-sbf --features enable-gpl
+          
