--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -14,6 +14,19 @@ env:
   RUST_TOOLCHAIN: '1.69.0'
 
 jobs:
+  format:
+    name: Format
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Install Rust toolchain
+        run: rustup toolchain install ${{ env.RUST_TOOLCHAIN }} --component rustfmt
+
+      - name: Run fmt
+        run: cargo fmt -- --check
+
   lint:
     name: Run Linters
     runs-on: ubuntu-latest
@@ -25,9 +38,6 @@ jobs:
 
       - name: Cache dependencies
         uses: Swatinem/rust-cache@v2
-
-      - name: Run fmt
-        run: cargo fmt -- --check
 
       - name: Run clippy
         run: cargo clippy -- --deny=warnings
@@ -77,3 +87,6 @@ jobs:
         run: |
           cargo build-sbf || true
           cargo +solana build-sbf
+      
+      - name: Run tests
+        run: cargo +solana test-sbf
