--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -36,14 +36,13 @@ jobs:
           target-dir: .coderrect/build
 
       - name: Install Solana
-        if: steps.solana-cache.outputs.cache-hit != 'true'
         run: |
           echo Installing Solana v${{ env.SOLANA_VERSION }}...🧬
           sh -c "$(curl -sSfL https://release.solana.com/v${{ env.SOLANA_VERSION }}/install)"
           echo "$HOME/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
           export PATH="/home/runner/.local/share/solana/install/active_release/bin:$PATH"
           echo Installing bpf toolchain...
-          (cd /home/runner/.local/share/solana/install/active_release/bin/sdk/bpf/scripts; ./install.sh)
+          (cd /sdk/bpf/scripts; ./install.sh)
         shell: bash
 
       - name: Install Soteria
