--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -35,9 +35,11 @@ jobs:
           sh -c "$(curl -sSfL https://release.solana.com/v${{ env.SOLANA_VERSION }}/install)"
           echo "$HOME/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
           export PATH="/home/runner/.local/share/solana/install/active_release/bin:$PATH"
-          echo Installing bpf toolchain...
-          (cd /home/runner/.local/share/solana/install/active_release/bin/sdk/bpf/scripts; ./install.sh)
         shell: bash
+
+      - name: Install bpf
+        run: |
+          (cd /scripts; ./install-bpf.sh)
 
       - name: Install Soteria
         run: |
